install/kubernetes/kubeflow/v1.2.0/.cache/manifests/manifests-1.2.0/metadata/overlays/istio/virtual-service-metadata-grpc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: metadata-grpc
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /ml_metadata
    rewrite:
      uri: /ml_metadata
    route:
    - destination:
        host: $(metadata-envoy-service).$(metadata-namespace).svc.$(ui-clusterDomain)
        port:
          number: 9090
    timeout: 300s
